--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -536,7 +536,7 @@
                         <div class="main-img">
                             <img src="images/books.jpg" loading="lazy" alt="Woman on computer">
                         </div>
-                        <div class="video-boxes">
+                        <div class="video-boxes videos2">
                             <img src="images/books2.jpeg" alt="Video thumbnail">
 
                         </div>
