--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -262,6 +262,7 @@ ul.navmenu li i {
 
 .Player5 iframe {
     height: 525px;
+    border-radius: 10px;
 }
 
 .Player5 {
@@ -2615,10 +2616,13 @@ a.buttobooksec {
     color: #512570;
 }
 
-.answercont {
+/* .answercont {
     max-height: 0;
     overflow: hidden;
     transition: 0.3s;
+} */
+.answercont {
+  transition: max-height 0.3s ease;
 }
 
 .faq-wrapper h3 {
@@ -5396,7 +5400,8 @@ section.sourses-section .right-content h3 {
     position: absolute;
     bottom: -30px;
     right: 0px;
-    width: 50%;
+    width: 245px;
+    height: 230px;
     background-color: white;
     border-radius: 16px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
@@ -5404,6 +5409,25 @@ section.sourses-section .right-content h3 {
     border: 10px solid #fff;
 }
 
+
+
+.video-boxes.videos2 {  
+    width: 50%;
+    height: auto; 
+}
+.video-boxes.videos2 img {  
+    width: 100%;
+    height: 100%; 
+}
+
+
+.video-boxes img {
+    display: block;
+    border-radius: 16px;
+    width: 245px;
+    height: 230px;
+    object-fit: cover;
+}
 .main-img::after {
     content: "";
     position: absolute;
@@ -5416,11 +5440,6 @@ section.sourses-section .right-content h3 {
     z-index: -1;
 }
 
-.video-boxes img {
-    width: 100%;
-    display: block;
-    border-radius: 16px;
-}
 
 .flex-who-we-are.mb-3 {
     margin-bottom: 80px;
