--- a/src/app/layout/courses/courses.component.html
+++ b/src/app/layout/courses/courses.component.html
@@ -1,9 +1,11 @@
 
 <!-- Loader -->
-<div *ngIf="loading" class="loader">
-  <img src="assets/loader.gif" alt="Loading..." />
-  loader
+<div *ngIf="loading" class="loader-maim"> 
+<div class="hm-spinner"></div>
 </div>
+
+
+
 <main class="mt pt-4" *ngIf="!loading">
  <div *ngIf="services?.length">
     <section class="sourses-section">
