commit in miskumar syamlal satishesh kumar and ramsavroop and memo and vijender and budu and chunnu and jago, and javan  all familly commit with familly

--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -5,7 +5,7 @@
 
 
 <div class="blog">
-  <main class="mt">
+  <main class="mt" *ngIf="!loading">
 
         <section class="blog-section">
             <div class="container">
