--- a/src/app/layout/courses/courses-details/courses-details.component.html
+++ b/src/app/layout/courses/courses-details/courses-details.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="loading" class="loader-maim"> 
 <div class="hm-spinner"></div>
 </div>
-<main class="pt-1 pt68px">
+<main *ngIf="!loading" class="pt-1 pt68px">
     <div class="healing-inner-pages height-7"
         [style.background-image]="'url(' + backgroundImage + ')'">
         <div class="container">
