--- a/src/app/layout/healing-services/services-details/childhood-trauma.component.html
+++ b/src/app/layout/healing-services/services-details/childhood-trauma.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="loading" class="loader-maim"> 
 <div class="hm-spinner"></div>
 </div>    
-<main class="mt">
+<main class="mt " *ngIf="!loading">
                     <section id="top0" class="kanny-content">
                         <div class="container">
                             <div class="contentallkanny">
