--- a/src/app/layout/book-session/book-session.component.html
+++ b/src/app/layout/book-session/book-session.component.html
@@ -170,7 +170,7 @@
                     </ul>
 
 
-                    <a routerLink="/meet-kenny" class="button">Discover More</a>
+                    <a routerLink="/book-session" class="button">Discover More</a>
                 </div>
 
                 <div class="images">
