--- a/src/app/layout/feelings-wheel/feelings-wheel.component.html
+++ b/src/app/layout/feelings-wheel/feelings-wheel.component.html
@@ -55,7 +55,7 @@
                             disconnected from your authentic self. Download
                             it below to get started.</p>
                         <div class="button-row canter">
-                           <a routerLink="/" class="button whitebt">Enroll now</a>
+                           <a routerLink="/courses" class="button whitebt">Enroll now</a>
 
 
                         </div>
