--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -735,14 +735,14 @@
                 <div class="left-area">
                     <div class="thumbnail-wrapper3">
                         <div class="course-1">
-                            <img src="images/17.jpeg" loading="lazy" alt="">
+                            <img src="images/5.jpeg" loading="lazy" alt="">
                         </div>
                         <div class="touimg">
                             <div class="thumbnail image-2">
-                                <img src="images/13.jpeg" loading="lazy" alt="">
+                                <img src="images/12.jpeg" loading="lazy" alt="">
                             </div>
                             <div class="thumbnail image-3" loading="lazy" alt="">
-                                <img src="images/14.jpeg" loading="lazy" alt="">
+                                <img src="images/16.jpeg" loading="lazy" alt="">
                             </div>
                         </div>
                     </div>
@@ -755,8 +755,8 @@
 
                     <div class="rbt-feature-feature-style-2">
 
-                        <div class="listver">
-                            <div class="boxlist" data-aos="fade-up" data-aos-duration="100">
+                        <div class="listver" data-aos="fade-up" data-aos-duration="100">
+                            <div class="boxlist">
                                 <i class="fa-regular fa-heart"></i>
                             </div>
                             <div class="boxlist-content">
