--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,66 +1,94 @@
-  <footer class="footer">
-            <div class="footer-content" >
-                <h5 class="tag-line">Weekly Newsletter</h5>
-                <h3> Get my tips directly into your inbox every Monday morning.</h3>
-                <p class="caption">illustration by Ouch.pics</p>
-                <!-- <form class="newsletter-form">
+<footer class="footer">
+    <div class="footer-content">
+        <h5 class="tag-line">Weekly Newsletter</h5>
+        <h3> Get my tips directly into your inbox every Monday morning.</h3>
+        <p class="caption">illustration by Ouch.pics</p>
+        <!-- <form class="newsletter-form">
                     <input type="email" placeholder="Enter your e-mail" required />
                     <button type="submit">Subscribe!</button>
                 </form> -->
 
-                <form (ngSubmit)="submitSubscribe()" class="newsletter-form"  #form="ngForm">
-  <input type="email" name="email" [(ngModel)]="email" placeholder="Enter your e-mail" required />
-  <button type="submit">Subscribe!</button>
-</form>
+        <form (ngSubmit)="submitSubscribe()" class="newsletter-form" #form="ngForm">
+            <input type="email" name="email" [(ngModel)]="email" placeholder="Enter your e-mail" required />
+            <button type="submit">Subscribe!</button>
+        </form>
+        
 
-                   <div class="social-icons">
-                    <a target="_blank" href="https://www.facebook.com/kennyweiss.net"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><i class="fa-brands fa-instagram"></i></a>
-                    <a target="_blank" href="https://twitter.com/kennyweisskw"><i class="fa-brands fa-twitter"></i></a>
-                    <a target="_blank" href="https://www.youtube.com/channel/UC5eK9c7LRJoK6NW52nlythw"><i class="fa-brands fa-youtube"></i></a>
+        <div class="social-icons">
+            <a target="_blank" href="https://www.facebook.com/kennyweiss.net"><i
+                    class="fa-brands fa-facebook-f"></i></a>
+            <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><i class="fa-brands fa-instagram"></i></a>
+            <a target="_blank" href="https://twitter.com/kennyweisskw"><i class="fa-brands fa-twitter"></i></a>
+            <a target="_blank" href="https://www.youtube.com/channel/UC5eK9c7LRJoK6NW52nlythw"><i
+                    class="fa-brands fa-youtube"></i></a>
+        </div>
+    </div>
+
+
+    <div class="marquee">
+        <div class="marquee__inner">
+            <div class="marquee__group">
+                <div class="instagram-feed">
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/1.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/2.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/3.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/4.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/5.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/6.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/7.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/8.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/9.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/10.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/11.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/12.jpeg"
+                            loading="lazy" alt=""></a>
                 </div>
             </div>
 
-
-            <div class="marquee">
-                <div class="marquee__inner">
-                    <div class="marquee__group">
-                        <div class="instagram-feed">
-                            <a href="#"><img src="./images/1.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/2.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/3.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/4.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/5.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/6.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/7.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/8.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/9.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/10.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/11.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/12.jpeg" loading="lazy" alt=""></a>
-                        </div>
-                    </div>
-
-                    <div class="marquee__group">
-                        <div class="instagram-feed">
-                            <a href="#"><img src="./images/1.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/2.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/3.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/4.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/5.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/6.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/7.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/8.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/9.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/10.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/11.jpeg" loading="lazy" alt=""></a>
-                            <a href="#"><img src="./images/12.jpeg" loading="lazy" alt=""></a>
-                        </div>
-                    </div>
+            <div class="marquee__group">
+                <div class="instagram-feed">
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/1.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/2.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/3.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/4.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/5.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/6.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/7.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/8.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/9.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/10.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/11.jpeg"
+                            loading="lazy" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><img src="./images/12.jpeg"
+                            loading="lazy" alt=""></a>
                 </div>
             </div>
+        </div>
+
+    </div>
 
 
 
-            <p class="rights-reserved">Copyright © 2025 Kenny Weiss | All Rights Reserved</p>
-        </footer>
+    <p class="rights-reserved">Copyright © 2025 Kenny Weiss | All Rights Reserved</p>
+</footer>
