--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -26,9 +26,11 @@ h6 {
     font-family: "Montserrat", sans-serif;
     line-height: 1.3em;
 }
+
 .mt-3 {
     margin-top: 30px !important;
-} 
+}
+
 bold {
     font-weight: 700;
 }
@@ -631,7 +633,10 @@ img.logos-people6 {
     position: relative;
     left: -125px;
 }
-
+img.logos-people7 {
+    position: relative;
+    left: -150px;
+}
 .bannerflex {
     height: 100%;
     display: flex;
@@ -691,9 +696,11 @@ a.button.blockbutton:hover {
     background-color: #ffffff;
     color: #434343;
 }
-.success-message  {
+
+.success-message {
     color: #1cbf00;
 }
+
 .submitebut .button.resorsbutons {
     background-color: #bba056;
     cursor: pointer;
@@ -734,7 +741,11 @@ section.books-section {
 .books-main {
     width: 90%;
 }
-
+h4.wp-block-heading, h5.wp-block-heading {
+    font-size: 1em;
+    font-weight: 500;
+    margin: 15px 0px;
+}
 .books-main-right {
     width: 40%;
     text-align: right;
@@ -1150,10 +1161,12 @@ ul.doterd li::after {
     top: 8px;
     border-radius: 15px;
 }
+
 .et_pb_text_inner p a {
     color: #512570;
     font-weight: 600;
 }
+
 ul.doterd {
     padding-left: 20px;
     margin: 10px 0px;
@@ -1355,7 +1368,11 @@ section.into-section .wellness-col {
     height: 100%;
     background-color: rgb(21 21 21 / 6%);
 }
-.colorlink a {color: #BBA056;}
+
+.colorlink a {
+    color: #BBA056;
+}
+
 .progress-content {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -1453,41 +1470,41 @@ section.into-section .wellness-col {
     width: 100%;
 }
 
-.video-box-row.blockvider{
+.video-box-row.blockvider {
     display: block;
 }
 
 
-.hm-spinner{
-  height: 70px;
-  width: 70px;
-  border: 3px solid transparent;
-  border-top-color: #d169dd;
-  border-bottom-color: #d169dd;
-  border-radius: 50%;
-  position: relative;
-  -webkit-animation: spin 3s linear infinite;
-          animation: spin 3s linear infinite;
+.hm-spinner {
+    height: 70px;
+    width: 70px;
+    border: 3px solid transparent;
+    border-top-color: #d169dd;
+    border-bottom-color: #d169dd;
+    border-radius: 50%;
+    position: relative;
+    -webkit-animation: spin 3s linear infinite;
+    animation: spin 3s linear infinite;
 }
 
-.hm-spinner::before{
-  content: "";
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  bottom: 20px;
-  left: 20px;
-  border: 3px solid transparent;
-  border-top-color: #d169dd;
-  border-bottom-color: #d169dd;
-  border-radius: 50%;
-  -webkit-animation: spin 1.5s linear infinite;
-  animation: spin 1.5s linear infinite;
+.hm-spinner::before {
+    content: "";
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    bottom: 20px;
+    left: 20px;
+    border: 3px solid transparent;
+    border-top-color: #d169dd;
+    border-bottom-color: #d169dd;
+    border-radius: 50%;
+    -webkit-animation: spin 1.5s linear infinite;
+    animation: spin 1.5s linear infinite;
 
 }
 
 .loader-maim {
-      background-color: #ffffff;
+    background-color: #ffffff;
     width: 100%;
     display: flex;
     align-items: center;
@@ -1500,28 +1517,30 @@ section.into-section .wellness-col {
 }
 
 
- 
+
 
 @-webkit-keyframes spin {
-  from {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
+    from {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    to {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
 
 @keyframes spin {
-  from {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
+    from {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    to {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
 
 
@@ -1561,7 +1580,7 @@ img.award-star {
 .aboutus .right {
     position: relative;
 }
- 
+
 .aboutus img {
     height: 100%;
 }
@@ -1610,10 +1629,10 @@ p.left-br {
     z-index: 999999;
     display: none;
 }
- 
+
 
 .lightbox-bg:has(.lightbox.active) {
-  display: block;
+    display: block;
 }
 
 .lightbox {
@@ -1637,7 +1656,7 @@ p.left-br {
 
 .close3 {
     position: absolute;
-    top: -42px;
+    top: -53px;
     right: 0;
     color: white;
     font-size: 50px;
@@ -1649,12 +1668,13 @@ p.left-br {
 }
 
 .lightbox {
-  display: none;
+    display: none;
 }
+
 .lightbox.active {
-  display: block; 
+    display: block;
 }
- 
+
 
 .kannyimgg {
     overflow: hidden;
@@ -2192,7 +2212,7 @@ h5.info-title {
     margin-bottom: 20px;
 }
 
- .flex-who-we-are.sticky .left-images {
+.flex-who-we-are.sticky .left-images {
     position: sticky;
     top: 90px;
 }
@@ -2330,8 +2350,7 @@ h5.info-title {
     border-radius: 12px;
     padding: 20px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    display: flex
-;
+    display: flex;
     align-items: center;
     justify-content: left;
     height: 58px;
@@ -2586,7 +2605,8 @@ a.buttobooksec {
 
 .main-content h3 {
     margin-top: 30px;
-    font-size: 1.6rem;
+        font-size: 1.4rem;
+    font-weight: 500;
 }
 
 .courses-details-contents h4 {
@@ -2691,7 +2711,7 @@ a.buttobooksec {
     transition: 0.3s;
 } */
 .answercont {
-  transition: max-height 0.3s ease;
+    transition: max-height 0.3s ease;
 }
 
 .faq-wrapper h3 {
@@ -4042,8 +4062,9 @@ section.podcastvideos {
 }
 
 .main-img.noafter img {
- border-radius: 10px;
+    border-radius: 10px;
 }
+
 .main-img.noafter::after {
     display: none;
 }
@@ -4478,7 +4499,7 @@ span.bolder {
 }
 
 .newsletter-form button {
-    background-color: #BBA056;
+    background-color: #512570;
     color: #ffffff;
     border: none;
     padding: 15px 25px;
@@ -5480,13 +5501,14 @@ section.sourses-section .right-content h3 {
 
 
 
-.video-boxes.videos2 {  
+.video-boxes.videos2 {
     width: 50%;
-    height: auto; 
+    height: auto;
 }
-.video-boxes.videos2 img {  
+
+.video-boxes.videos2 img {
     width: 100%;
-    height: 100%; 
+    height: 100%;
 }
 
 
@@ -5497,6 +5519,7 @@ section.sourses-section .right-content h3 {
     height: 230px;
     object-fit: cover;
 }
+
 .main-img::after {
     content: "";
     position: absolute;
@@ -5607,8 +5630,7 @@ section.sourses-section .right-content h3 {
     background-color: #e15336;
 }
 
-.sandstone-logo-blk 
- {
+.sandstone-logo-blk {
     margin-top: 20px;
     width: 220px;
 }
@@ -5706,6 +5728,7 @@ section.sourses-section .right-content h3 {
 .video-box-row.blockvider ul li {
     display: block;
 }
+
 .card-body .stars {
     color: #BBA056;
     font-size: 0.7em;
@@ -5884,17 +5907,19 @@ a.more-link.button {
     height: 20px;
     font-size: 13px;
 }
- 
+
 .card-img {
     position: relative;
 }
+
 .card-img a {
     min-height: 300px;
     display: inline-block;
 }
-.card-img a img  {
-    min-height: 300px; 
-        object-fit: cover;
+
+.card-img a img {
+    min-height: 300px;
+    object-fit: cover;
 }
 
 .stars ul {
@@ -6042,7 +6067,14 @@ a.more-link.button {
     max-height: 360px;
     object-fit: cover;
 }
-
+.thumbnail 
+ {
+    max-height: 288px;
+    overflow: hidden;
+    display: flex
+;
+    align-items: center;
+}
 .left-area {
     width: 45%;
 }
@@ -6052,9 +6084,9 @@ a.more-link.button {
 }
 
 .touimg {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     gap: 15px;
-    justify-content: space-between;
     margin-top: 15px;
 }
 
@@ -6713,9 +6745,11 @@ a.button.border-only {
     section.recommended-readinglist {
         padding: 50px 0px;
     }
-.flex-who-we-are.sticky {
-    gap: 65px;
-}
+
+    .flex-who-we-are.sticky {
+        gap: 65px;
+    }
+
     .bookssection .left-images {
         height: auto;
     }
@@ -6755,7 +6789,7 @@ a.button.border-only {
         gap: 205px;
     }
 
-  .flex-who-we-are.sticky  .left-images {
+    .flex-who-we-are.sticky .left-images {
         position: relative;
         top: auto;
     }
@@ -7599,6 +7633,28 @@ a.button.border-only {
     }
 
 
+
+.banner-content {
+    text-align: center;
+}
+    .button-row a.button {
+        margin-top: 5px;
+        width: 100%;
+    }
+    .video-box.shine-effect {
+    width: 100%;
+}
+.video-box.shine-effect img {
+    width: auto!important;
+}
+.self-development-content {
+        width: 100%;
+    }
+
+    .blog-img {
+        max-height: max-content; 
+        height: auto;
+    }
 
 
 
