--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7427,7 +7427,7 @@ a.button.border-only {
 
 
     .healing-inner-pages.height-7 {
-        background-position: -240px 0;
+        background-position: center;
     }
 
     .card-image-grey-bg {
