--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7131,7 +7131,7 @@ a.button.border-only {
     }
 
     .flex-who-we-are {
-        gap: 70px;
+        gap: 168px;
     }
 
     .button {
@@ -7517,7 +7517,9 @@ a.button.border-only {
     main.pt-1.pt-4 {
         padding-top: 70px;
     }
-
+main.pt-1.pt68px{
+    padding-top: 0;
+}
     main.pt-1 {
         padding-top: 70px;
     }
@@ -7542,9 +7544,13 @@ a.button.border-only {
         padding-bottom: 0;
     }
 
+.industry-grid { 
+    gap: 30px;
+}
 
-
-
+.industry-card{
+    padding-left: 20px;
+}
 
 
 
@@ -7552,6 +7558,13 @@ a.button.border-only {
 }
 
 @media (max-width: 500px) {
+.grid-3-7 { 
+    padding: 30px 0;
+}
+section.who-we-are {
+    padding: 30px 0px;
+}
+
     .flexbuttoons {
         gap: 20px 0px;
         flex-wrap: wrap;
@@ -7657,6 +7670,15 @@ a.button.border-only {
         height: auto;
     }
 
+.video-boxes img { 
+    height: 160px; 
+}
 
+.video-boxes{
+    height: 160px;
+}
 
+h3 {
+    font-size: 1.5em; 
+}
 }
