--- a/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
+++ b/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
@@ -92,29 +92,32 @@
             <div class="container">
                 <div class="booklistblog">
 
-                    <div class="bookcard" data-aos="fade-up" data-aos-duration="100">
+                    <div class="bookcard" *ngFor="let wdcpost of wdcposts" data-aos="fade-up" data-aos-duration="100">
                         <div class="bookcardimg">
-                            <img src="images/part1.webp" loading="lazy" alt="">
+                              <a [routerLink]="['/', wdcpost.slug]"> 
+                                <!-- Agar featured image ho -->
+                                <img *ngIf="!wdcpost.courseImage && wdcpost.featuredImage" 
+                                    [src]="wdcpost.featuredImage" 
+                                    alt="{{ wdcpost.title?.rendered }}" 
+                                    loading="lazy"> 
+                                    </a>
                         </div>
                         <div class="bookcardbody">
-                            <h4>How To Heal The Worst Day Cycle- Part 1</h4>
+                            <h4 [innerHTML]="wdcpost.title.rendered">How To Heal The Worst Day Cycle- Part 1</h4>
                             <div class="info">
                                 <div><i class="fa-solid fa-calendar-days"></i> May 14, 2022</div>
                                 <div><i class="fa-solid fa-user-tie"></i> Worst Day Cycle</div>
                             </div>
-                            <p> For centuries society has stigmatized, and science has incorrectly downplayed the
-                                importance of Emotional Authenticity. But unfortunately, these factors have resulted in
-                                humans developing an emotionally self-destructive survival process to absorb the
-                                childhood... </p>
+                            <div [innerHTML]="wdcpost.excerpt.rendered"></div>
 
                             <div class="author">
                                 <div>
                                     <img src="images/16.jpeg" alt="Author" loading="lazy">
                                     <div class="author-info">
-                                        <span>By Kenny</span>
+                                        <span>By <span [innerHTML]="wdcpost._embedded?.author[0]?.name"></span></span>
                                     </div>
                                 </div>
-                                <a routerLink="/" class="button abslut">
+                                <a [routerLink]="['/', wdcpost.slug]" class="button abslut">
                                     Read More <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
                                 </a>
 
@@ -122,167 +125,7 @@
 
                         </div>
                     </div>
-
-                    <div class="bookcard" data-aos="fade-up" data-aos-duration="100">
-                        <div class="bookcardimg">
-                            <img src="images/part2.webp" loading="lazy" alt="">
-                        </div>
-                        <div class="bookcardbody">
-                            <h4>How To Heal The Worst Day Cycle – Part 2 Trauma</h4>
-                            <div class="info">
-                                <div><i class="fa-solid fa-calendar-days"></i> Apr 22, 2022</div>
-                                <div><i class="fa-solid fa-user-tie"></i> Worst Day Cycle</div>
-                            </div>
-                            <p>Today's Best Day Blog article is here to help you on your journey to healing from the
-                                past, gain Emotional Authenticity, and love and accept your perfect imperfections. This
-                                is part two of my 5-part series about how to heal The Worst Day Cycle, and here I'm
-                                going to...</p>
-
-                            <div class="author">
-                                <div>
-                                    <img src="images/16.jpeg" alt="Author" loading="lazy" alt="">
-                                    <div class="author-info">
-                                        <span>By Kenny</span>
-                                    </div>
-                                </div>
-                                 <a routerLink="/" class="button abslut">
-                                    Read More <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
-                                </a>
-
-                            </div>
-
-                        </div>
-                    </div>
-
-
-                    <div class="bookcard" data-aos="fade-up" data-aos-duration="100">
-                        <div class="bookcardimg">
-                            <img src="images/part3.webp" loading="lazy" alt="">
-                        </div>
-                        <div class="bookcardbody">
-                            <h4>How To Heal The Worst Day Cycle – Part 3 Fear</h4>
-                            <div class="info">
-                                <div><i class="fa-solid fa-calendar-days"></i> Apr 3, 2022</div>
-                                <div><i class="fa-solid fa-user-tie"></i> Worst Day Cycle</div>
-                            </div>
-                            <p>In part 3 of how to heal The Worst Day Cycle, I will share how the brain and body create
-                                the emotional, and chemical addiction to fear, which is stage 2 of the cycle. If you
-                                missed parts one and two, I provide links at the end of this article. How the brain
-                                works It...</p>
-
-                            <div class="author">
-                                <div>
-                                    <img src="images/16.jpeg" alt="Author" loading="lazy">
-                                    <div class="author-info">
-                                        <span>By Kenny</span>
-                                    </div>
-                                </div>
-                                <a routerLink="/" class="button abslut">
-                                    Read More <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
-                                </a>
-
-                            </div>
-
-                        </div>
-                    </div>
-
-
-                    <div class="bookcard" data-aos="fade-up" data-aos-duration="100">
-                        <div class="bookcardimg">
-                            <img src="images/part4.webp" loading="lazy" alt=""> 
-                        </div>
-                        <div class="bookcardbody">
-                            <h4>How To Heal The Worst Day Cycle – Part 4 Shame</h4>
-                            <div class="info">
-                                <div><i class="fa-solid fa-calendar-days"></i> Apr 1, 2022</div>
-                                <div><i class="fa-solid fa-user-tie"></i> Worst Day Cycle</div>
-                            </div>
-                            <p>As a species, we need two things to survive, attachment to another human being and the
-                                ability to pursue our authentic selves. Because our caregivers are human and therefore,
-                                perfectly imperfect, we survive by dropping our authentic selves to create attachment.
-                                The...</p>
-
-                            <div class="author">
-                                <div>
-                                    <img src="images/16.jpeg" alt="Author" loading="lazy">
-                                    <div class="author-info">
-                                        <span>By Kenny</span>
-                                    </div>
-                                </div>
-                               <a routerLink="/" class="button abslut">
-                                    Read More <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
-                                </a>
-
-                            </div>
-
-                        </div>
-                    </div>
- 
-
-                    <div class="bookcard" data-aos="fade-up" data-aos-duration="100">
-                        <div class="bookcardimg">
-                            <img src="images/part5.webp" loading="lazy" alt="">
-                        </div>
-                        <div class="bookcardbody">
-                            <h4>How To Heal The Worst Day Cycle – Part 5 Denial</h4>
-                            <div class="info">
-                                <div><i class="fa-solid fa-calendar-days"></i> Mar 31, 2022</div>
-                                <div><i class="fa-solid fa-user-tie"></i> Worst Day Cycle</div>
-                            </div>
-                            <p>It has been my life experience that the single greatest killer on the planet today is
-                                denial. It permeates every aspect of life and it is always at the central core of all
-                                life problems. Denial of this truth itself is why no one is talking about or dealing
-                                with it. Therefore, becoming an expert in your denial and self-deception is the most
-                                important skill you need to learn if you want to overcome The Worst Day Cycle. By doing
-                                so, you will have a profound impact on your healing journey.</p>
-
-                            <div class="author">
-                                <div>
-                                    <img src="images/16.jpeg" alt="Author" loading="lazy">
-                                    <div class="author-info">
-                                        <span>By Kenny</span>
-                                    </div>
-                                </div>
-                               <a routerLink="/" class="button abslut">
-                                    Read More <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
-                                </a>
-
-                            </div>
-
-                        </div>
-                    </div>
-
-
-                    <div class="bookcard" data-aos="fade-up" data-aos-duration="100">
-                        <div class="bookcardimg">
-                            <img src="images/part5.webp" loading="lazy" alt="">
-                        </div>
-                        <div class="bookcardbody">
-                            <h4>How To Heal The Worst Day Cycle- Part 1</h4>
-                            <div class="info">
-                                <div><i class="fa-solid fa-calendar-days"></i> May 14, 2022</div>
-                                <div><i class="fa-solid fa-user-tie"></i> Worst Day Cycle</div>
-                            </div>
-                            <p> For centuries society has stigmatized, and science has incorrectly downplayed the
-                                importance of Emotional Authenticity. But unfortunately, these factors have resulted in
-                                humans developing an emotionally self-destructive survival process to absorb the
-                                childhood... </p>
-
-                            <div class="author">
-                                <div>
-                                    <img src="images/16.jpeg" alt="Author" loading="lazy">
-                                    <div class="author-info">
-                                        <span>By Kenny</span>
-                                    </div>
-                                </div>
-                                <a routerLink="/" class="button abslut">
-                                    Read More <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
-                                </a>
-
-                            </div>
-
-                        </div>
-                    </div>
+  
 
 
 
