amit commit blog

--- a/src/app/layout/blog/blog-details/blog-details.component.html
+++ b/src/app/layout/blog/blog-details/blog-details.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="loading" class="loader-maim"> 
 <div class="hm-spinner"></div>
 </div>
-<main   class="pt-1"  *ngIf="post">
+<main   class="pt-1 blogdetailspage"  *ngIf="post">
         <div class="bg-gry colorlink">
             <div class="container">
                 <div class="grid2"> 
@@ -48,7 +48,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="service-item-main">
+                            <!-- <div class="service-item-main">
                                 <h4>Our Categories</h4>
                                 <article class="post">
                                     <figure class="post-thumb"><img src="images/Have-You-Experienced.webp" loading="lazy" alt=""><a
@@ -80,7 +80,7 @@
                                         <div class="post-info">24th March 2022</div>
                                     </div>
                                 </article>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
